# servonk

./: .gitignore  Cargo.toml  bootstrap.sh  build.sh  clean.sh  flash.sh  fonts.xml  kill.sh  network-setup.sh  push.sh  readme.md  run.sh  servo.sh  servonk  servonk.sh  todo.md  update-servo.sh
api-server/: Cargo.toml
api-server/.cargo/: config
api-server/src/: lib.rs  server.rs
docs/: Target-devices-and-platforms.md  architecture-and-execution.md  build-aries-l  build-linux-glutin.md  build-nexus-5-l.md  build-process.md  build-tutorial-Unix-MacOS-HighSierra.md  build-tutorial-linux-debian.md  build-tutorial.md  faq.md  get-servonk.md  organisation.md  run-releases.md  target-devices-and-platforms.md  troubleshooting.md  tutorial_build.md
frontend/: todo.md
frontend/ui/homescreen/: index.html  page2.html  page3.html
frontend/ui/homescreen/css/: index.css
frontend/ui/homescreen/js/: index.js
frontend/ui/homescreen/locales/: en-US.ftl
frontend/ui/keyboard/: index.html  manifest.webapp  settings.html
frontend/ui/keyboard/js/keyboard/: bootstrap.js  console.js  keyboard_app.js  state_manager.js
frontend/ui/keyboard/js/settings/: layouts.json
frontend/ui/keyboard/js/shims/: bootstrap.js  input_method.js  key_event.js  settings.js  starter.js
frontend/ui/keyboard/locales-obj/: index.fr-x-psaccent.json  settings.ar-x-psbidi.json  settings.en-US.json
frontend/ui/shared/: hyper_html.js  top-10k.json  utils.js
frontend/ui/shared/fluent/: fluent-web.js
frontend/ui/shared/fontawesome/css/: list.txt
frontend/ui/system/: index.html
frontend/ui/system/css/: index.css  lockscreen.css  navbar.css  search_panel.css  statusbar.css  theme.css  virtual_keyboard.css  window_manager.css
frontend/ui/system/gaia_keyboard/: app.html  dom_request.js  event_target.js  gaia_keyboard.css  gaia_keyboard.js  input_method.js  layouts_list.js  settings.js
frontend/ui/system/js/: lockscreen.js  main.js  navbar.js  search_panel.js  statusbar.js  virtual_keyboard.js  web_view.js  window_manager.js
frontend/ui/system/js/scripts/: 00.keyboard_api.js
frontend/ui/system/locales/: en-US.ftl
frontend/ui/test/: content.html  index.css  index.html
mtdev/: bindgen.sh
mtdev/mtdev-1.1.5/: Makefile  config.status  configure  libtool  mtdev.pc
mtdev/mtdev-1.1.5/src/: Makefile  Makefile.in  caps.c  core.c
mtdev/mtdev-1.1.5/test/: Makefile  Makefile.in  mtdev-mapgen  mtdev-test  mtdev-test.c
mtdev/src/: lib.rs
platform/glutin/: Cargo.toml  browser.rs  main.rs
platform/glutin/glutin_app/: window.rs
platform/glutin/support/scripts/: build.sh  clean.sh  package.sh  run-servonk  run.sh
platform/gonk/: Cargo.toml  build.sh  makefile.cargo
platform/gonk/.cargo/: config
platform/gonk/mtdev/: Cargo.toml  bindgen.sh  build.rs  build.sh
platform/gonk/mtdev/mtdev-1.1.5/: ChangeLog  Makefile  Makefile.in  config.h  config.status  configure.ac  libtool  mtdev.pc
platform/gonk/mtdev/mtdev-1.1.5/src/: Makefile
platform/gonk/mtdev/mtdev-1.1.5/test/: Makefile  Makefile.am  mtdev-kernel  mtdev-mapgen  mtdev-mapgen.c  mtdev-matching  mtdev-matching.c
platform/gonk/src/: browser.rs  browser_window.rs  events_loop.rs  input.rs  main.rs  resources.rs
platform/gonk/support/android/: openssl.makefile
platform/gonk/support/gdb/: load-config.sh  run-gdb.sh
platform/gonk/support/include/: math.h
platform/gonk/support/linker/: fake-ld-arm.sh
platform/gonk/support/scripts/: build.sh  clean.sh  flash.sh  network-setup.sh  run.sh  update-frontend.sh
platform/shared/resources/: ca-certificates.crt
python/: mach_bootstrap.py
python/servo/: bootstrap_commands.py  build_commands.py  command_base.py
python/tidy/servo_tidy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: browser.rs  browser_window.rs  events_loop.rs  gonk_gfx.rs  input.rs  main.rs  native_window_glue.cpp  window.rs
support/linker/: fake-ld-arm64.sh  fake-ld-armv7.sh  fake-ld.sh
