[package]
name = "servonk"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]

[dependencies]
egl = "0.2"
errno = "0.2"
gleam = "0.4"
libc = "0.2"
# The gonk branch of Servo adds a feature to turn off the unimplemented web-bluetooth.
libservo = { git = "https://github.com/fabricedesre/servo", branch = "gonk" }
