[package]
name = "api_server"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]

[dependencies]
actix = "0.5"
actix-web = "0.5"
libservo = { git = "https://github.com/fabricedesre/servo", branch = "gonk" }
nonzero = { git = "https://github.com/fabricedesre/servo", branch = "gonk" }
# libservo = { path = "/home/fabrice/dev/servo/components/servo" }
# nonzero = { path = "/home/fabrice/dev/servo/components/nonzero" }

log = "0.4"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"