[package]
name = "api_server"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]

[dependencies]
actix = "0.7"
libservo = { git = "https://github.com/fabricedesre/servo", branch = "gonk" }
# libservo = { path = "/home/fabrice/dev/servo/components/servo" }
log = "0.4"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.actix-web]
version = "0.7"
default-features = false
features = ["tls", "alpn", "session", "brotli"]
