[package]
name = "servonk"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]

[dependencies]
api_server = { path = "../../api-server" }
android_logger = "0.5"
egl = "0.2"
errno = "0.2"
gleam = "0.4"
gonk-gfx = { git = "https://github.com/fabricedesre/gonk-gfx-rs" }
libc = "0.2"
# The gonk branch of Servo adds a feature to turn off the unimplemented web-bluetooth
# and provides gonk support for the config.
libservo = { git = "https://github.com/fabricedesre/servo", branch = "gonk", features = ["gonk"] }
# libservo = { path = "/home/fabrice/dev/servo/components/servo", features = ["gonk"] }
log = "0.4"
mio = "0.6"
mtdev = { path = "mtdev" }

[patch.crates-io]
# Fork of rust-webvr to make sure we don't pull in the android glue and jni.
rust-webvr = { git = "https://github.com/fabricedesre/rust-webvr.git", branch = "gonk" }
rust-webvr-api = { git = "https://github.com/fabricedesre/rust-webvr.git", branch = "gonk" }
# Fork of mozjs_sys to bypass the Android NDK detection
mozjs_sys = { git = "https://github.com/fabricedesre/mozjs.git" }

# [profile.release]
# opt-level = 3
# debug = false
# rpath = false
# lto = true
# debug-assertions = false
# codegen-units = 1
